<resources>
    <string name="app_name">Instant Music</string>
    <string name="title_activity_instant_music_app">InstantMusicApp</string>
    <string name="password">Password</string>
    <string name="Correo_electronico">User or email</string>
    <string name="Contrasenya">Password</string>
    <string name="ConfirmPassword">Passwords does not match</string>
    <string name="Accion1">Create account</string>
    <string name="Accion2">Log in</string>
    <string name="Accion3">Forgot your password?</string>
    <string name="CreateAccount1">What´s your email?</string>
    <string name="CreateAccount2">Pick a password</string>
    <string name="CreateAccount3">Choose a username</string>
    <string name="CreateAccount5">Confirm password</string>
    <string name="Playing">Playing </string>
    <string name="PasswordAdvise">Use at least 8 characters </string>
    <string name="UsernameAdvise">Use at least 4 characters </string>
    <string name="CreateAccount">Next </string>
    <string name="CreateAccount4">Create </string>
    <string name="email">Email</string>
    <string name="SongName">Nombre de la cancion</string>
    <string name="AutorName">Nombre del autor</string>
    <string name="fondo">FondoApp</string>
    <string name="icono">InstantMusicIcono</string>
    <string name="register"><u>Register</u></string>
    <string name="emailAlreadyInUse">That email is already registered</string>
    <string name="emailNotRegistered">That email is not registered</string>
    <string name="passwordR"><u>Recover password</u></string>
    <string name="Advise">Your email and password combination does not match an InstantMusic account. Please try again</string>
    <string name="accept">Log in</string>
    <string name="search1">Search song</string>
    <string name="search2">Search artist</string>
    <string name="search3">Search genre</string>
    <string name="search4">Search album</string>
    <string name="search5">Search by title</string>
    <string name="search6">Filter by username</string>
    <string name="search7">Search by username</string>
    <string name="searchTip1">Find your favourite music</string>
    <string name="searchTip2">Search by artist, songs, albums or genre</string>
    <string name="searchTip3">Find your favourite podcasts</string>
    <string name="searchTip4">Search by title or creator</string>
    <string name="home">Home</string>
    <string name="searchButton">Search</string>
    <string name="podcasts">Podcasts</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="play">Play</string>
    <string name="changename">Edit playlist name</string>
    <string name="category">Genre</string>
    <string name="artist">Artist</string>
    <string name="artist1">Creator</string>
    <string name="song">Song</string>
    <string name="song1">Title</string>
    <string name="album">Album</string>
    <string name="vacio"></string>
    <string name="artistAlbums">Albums &amp; Podcasts</string>
    <string name="artistSongs">Songs</string>
    <string name="myplaylist">My playlists</string>
    <string name="mypodcast">My Podcasts</string>
    <string name="mysong">Recommendations</string>
    <string name="addPlaylist">Create playlist</string>
    <string name="friendPlaylist">playlists</string>
    <string name="rateSong">Rate this song</string>
    <string name="homeTitle">Your home</string>
    <string name="songMenu1">Add to playlist</string>
    <string name="songMenu2">See artist</string>
    <string name="friendMenu">Remove friend</string>
    <string name="addPlaylist_">Add to playlist</string>
    <string name="addFriend_">Add new friend</string>
    <string name="removeSong_">Remove a song</string>
    <string name="createPlaylist">Create new playlist</string>
    <string name="insertName">Insert title</string>
    <string name="playlistMenu1">Delete playlist</string>
    <string name="podcastMenu1">Delete podcast</string>
    <string name="podcastMenu2">Add podcast</string>
    <string name="confirm">CONFIRM</string>
    <string name="orderPlaylist">Order by: </string>
    <string name="orderPlaylist1">Name</string>
    <string name="orderPlaylist2">Category</string>
    <string name="orderPlaylist3">Artist</string>
    <string name="orderPlaylist4">Date</string>
    <string name="loading">Loading...</string>
    <string name="pausedSong">Continue playback: nombre_cancion</string>
    <string name="off_nosongs">No saved songs.\nDownloaded ones will be shown here.</string>
    <string name="off_downloading">Downloading \"%s\"</string>
    <string name="off_downloaded">Downloaded</string>
    <string name="off_error">Can\'t download, try again later</string>
    <string name="notFriend">User not found</string>
    <string name="friendsTitle">Friends</string>
    <string name="email_sent">Email sent, check your inbox</string>
    <string name="email_wrong">Enter a valid email address</string>
    <string name="continue_playback">Continue playback: %s</string>
    <string name="yourEmail">Your email: </string>
    <string name="change">Change </string>
    <string name="changeP">Change password </string>
    <string name="closeS">Log out </string>
    <string name="oldPassword"> </string>
    <string name="user">Your username:  </string>

</resources>
