<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MusicApp">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/grade"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_anchorGravity="center|center_horizontal|center_vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <TextView
            android:id="@+id/Accion"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:text="@string/Accion1"
            android:textColor="#F8EBF0"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="17dp"
                    android:layout_height="20dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/Enunciado1"
                    android:layout_width="wrap_content"
                    android:layout_height="43dp"
                    android:text="@string/CreateAccount3"
                    android:textColor="#F8EBF0"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/usernameSign"
                android:layout_width="375dp"
                android:layout_height="39dp"
                android:layout_gravity="center"
                android:autoLink="email"
                android:background="@drawable/edit_round"
                android:ems="10"
                android:hapticFeedbackEnabled="true"
                android:hint="@android:string/defaultMsisdnAlphaTag"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#F8EBF0"
                android:textColorHighlight="#F8EBF0"
                android:textColorHint="#7E7A80"
                android:textColorLink="#7E7A80"
                android:textSize="20sp"
                android:paddingLeft="10dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="17dp"
                    android:layout_height="20dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/usernameTip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/UsernameAdvise"
                    android:textColor="#F8EBF0" />
            </LinearLayout>

            <Space
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <Button
                android:id="@+id/createF"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/edit_round"
                android:text="@string/CreateAccount4"
                android:textColor="#F8EBF0"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>