<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grade"
    tools:context=".main.MusicApp">

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="14dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <Button
                android:id="@+id/backButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:background="@drawable/flecha"
                android:shadowColor="#00FFFFFF"
                android:textColor="#00FFFFFF"
                android:textColorHighlight="#00FFFFFF"
                android:textColorHint="#00FFFFFF"
                android:textColorLink="#00FFFFFF" />

            <Space
                android:layout_width="310dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_weight="0" />

            <ImageButton
                android:id="@+id/points2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_weight="0"
                android:background="#00FFFFFF"
                android:scaleType="center" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/secondaryColor"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Space
                    android:layout_width="7dp"
                    android:layout_height="0dp"
                    android:layout_weight="0" />

                <EditText
                    android:id="@+id/searchbar2"
                    android:layout_width="254dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    android:background="#F8EBF0"
                    android:hint="@string/search7"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    android:background="@color/backColor"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/search"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="0"
                        android:background="@drawable/searchicon" />
                </LinearLayout>

                <Space
                    android:layout_width="7dp"
                    android:layout_height="0dp"
                    android:layout_weight="0" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="6dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:layout_weight="0"
                app:srcCompat="@color/secondaryColor" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/notFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:visibility="invisible"
            tools:text="@string/notFriend" />

        <ListView
            android:id="@+id/searchRes"
            android:layout_width="397dp"
            android:layout_height="534dp"
            android:layout_gravity="center">

        </ListView>

    </LinearLayout>

    <TextView
        android:id="@+id/playlistName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:text="@string/addFriend_"
        android:textAlignment="center"
        android:textColor="@color/backColor"
        android:textSize="22sp"
        app:layout_anchor="@+id/linearLayout9"
        app:layout_anchorGravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>